 # Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.

cmake_minimum_required(VERSION 3.5.0)
project(entry)

set(env ${CMAKE_CURRENT_SOURCE_DIR})
set(SDL_HOME_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../3rdParty/SDL2)
set(NATIVE_INCLUDE_PATH ${SDL_HOME_PATH}/include
    ${SDL_HOME_PATH}/src/video/khronos/GLES2
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/bgfx/Header)

add_subdirectory(${SDL_HOME_PATH} sdl2)
include_directories(
    ${NATIVE_INCLUDE_PATH}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/SDL2/Header
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/bgfx/Header
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/lodepng
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/imgui
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/implot
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/font
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/asio
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/OpenSSL/Header
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer
)

link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
add_definitions(-DWITH_SDL2 -DBX_CONFIG_DEBUG=0 -Dd_m3HasWASI -DLUA_USE_LINUX -DSPDLOG_FMT_EXTERNAL -DDORA_NO_WA -DDORA_NO_RUST)

add_library(entry SHARED
    ${CMAKE_CURRENT_SOURCE_DIR}/ohos/napi_init.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/AINode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/Define.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/AI.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/Data.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/VisualCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/PlatformCamera.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/Unit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/Face.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/PlatformWorld.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/BulletDef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/Bullet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Platformer/UnitAction.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/AtlasCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/Cache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/ClipCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/ShaderCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/ParticleCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/TextureCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/SkeletonCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/ModelCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/DragonBoneCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/AudioCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/FontCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/FrameCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/SVGCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Cache/TMXCache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Input/Controller.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Input/Keyboard.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Input/Mouse.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Input/TouchDispather.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Entity/Entity.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/Director.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/AutoreleasePool.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/Object.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/Scheduler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/Database.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/Content.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basic/Application.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Effect/Effect.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Animation/ModelDef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Animation/Animation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Animation/Action.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/LuaFromXml.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/LuaBinding.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/LuaManual.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/LuaCode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/LuaHandler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/TealCompiler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/LuaEngine.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Http/HttpServer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Wasm/WasmRuntime.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Const/Header.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Common/Utils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Common/Singleton.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Common/Async.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Common/Debug.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Common/MemoryPool.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Audio/Audio.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Support/Common.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Support/Geometry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Support/Array.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Support/Value.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Support/Dictionary.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ML/ML.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GUI/ImGuiDora.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GUI/ImGuiBinding.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Render/Camera.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Render/RenderTarget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Render/Renderer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Render/VGRender.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Render/View.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Shader/Builtin.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/Joint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/BodyDef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/JointDef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/Body.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/Sensor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/PhysicsWorld.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Physics/DebugDraw.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Particle.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/VGNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Spine.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Menu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Sprite.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Grid.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Node.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Label.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/ClipNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Model.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/Playable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/DragonBone.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/DrawNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/AlignNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/EffekNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/TileNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Node/AudioSource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Event/EventType.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Event/EventQueue.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Event/Listener.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Event/Event.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/ToLua/tolua_event.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/ToLua/tolua_map.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/ToLua/tolua_push.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/ToLua/tolua_fix.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/ToLua/tolua_to.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/ToLua/tolua_is.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/Xml/DoraTag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Lua/Xml/XmlResolver.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Test/Test.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Test/HelloWorldCpp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yuescript/yue_compiler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yuescript/ast.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yuescript/yue_ast.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yuescript/yue_parser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yuescript/yuescript.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yuescript/parser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yarnflow/yarn_compiler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/implot/implot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/implot/implot_items.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/implot/implot_demo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/silly/Slice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Attachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Skeleton.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SkeletonRenderer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/TranslateTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Extension.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Updatable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Bone.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/AtlasAttachmentLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/EventTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PathConstraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Log.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/VertexAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/TextureLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PhysicsConstraintData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SkeletonData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/TransformConstraintTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/ConstraintData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/IkConstraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/CurveTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/AnimationStateData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/InheritTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/BoundingBoxAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PathAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/MeshAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/TransformConstraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Skin.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/RTTI.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/MathUtil.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SequenceTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/IkConstraintData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Atlas.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/ClippingAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PathConstraintData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Timeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SkeletonBinary.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/ScaleTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/LinkedMesh.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PointAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Sequence.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/RegionAttachment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/DeformTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Animation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/AttachmentLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PhysicsConstraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/DrawOrderTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/AttachmentTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/EventData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PathConstraintSpacingTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PathConstraintPositionTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/TransformConstraintData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SkeletonClipping.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Slot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/AnimationState.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SkeletonJson.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/BoneData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/IkConstraintTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SpineObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Event.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/RotateTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PathConstraintMixTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Triangulator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/PhysicsConstraintTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/Json.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SkeletonBounds.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/SlotData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/ShearTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/spine/ColorTimeline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/fmt/os.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/fmt/format.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/imgui/imgui_widgets.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/imgui/imgui.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/imgui/imgui_tables.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/imgui/imgui_demo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/imgui/imgui_draw.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Other/atlas.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Other/utf8.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/sqlite3.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/stb/stb.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lauxlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/liolib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lopcodes.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lstate.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lobject.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lmathlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/loadlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lvm.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lfunc.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lstrlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/linit.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lstring.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lundump.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lctype.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ltable.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ldump.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/loslib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lgc.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lzio.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ldblib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lutf8lib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lmem.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lcorolib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lcode.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ltablib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lapi.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lbaselib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ldebug.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/lparser.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/llex.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ltm.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Lua/ldo.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/colib/ljson.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_compile.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_api_libc.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_env.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_exec.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_bind.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_info.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_parse.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_module.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_api_tracer.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_core.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_api_wasi.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_code.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_function.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_api_meta_wasi.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/wasm3/m3_api_uvwasi.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/ml/DecisionTree.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tinyxml2/tinyxml2.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tinyxml2/SAXParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/lodepng/lodepng.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/font/font_manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/nanovg/nanovg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/nanovg/nanovg_bgfx.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/core/BaseObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/core/DragonBones.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/armature/Bone.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/armature/DeformVertices.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/armature/Constraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/armature/Armature.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/armature/Slot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/armature/TransformObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/animation/WorldClock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/animation/TimelineState.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/animation/BaseTimelineState.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/animation/Animation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/animation/AnimationState.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/parser/BinaryDataParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/parser/JSONDataParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/parser/DataParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/geom/Transform.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/geom/Point.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/DragonBonesData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/BoundingBoxData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/DisplayData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/ConstraintData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/AnimationConfig.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/SkinData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/AnimationData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/CanvasData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/ArmatureData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/UserData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/model/TextureAtlasData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/event/EventObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/dragonBones/factory/BaseFactory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Column.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Savepoint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Exception.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Statement.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Database.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Backup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/sqlite/SQLiteCpp/Transaction.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/miniz.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/ZipUtils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_filterops.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_fft_lut.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_voicegroup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_bus.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_fader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_file.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_audiosource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_fft.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_setters.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_voiceops.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_filter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_queue.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_faderops.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_basicops.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_thread.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_getters.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_core_3d.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/core/soloud_misc.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_eqfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_bassboostfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_echofilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_fftfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_robotizefilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_dcremovalfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_lofifilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_flangerfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_freeverbfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_biquadresonantfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/filter/soloud_waveshaperfilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/backend/sdl/soloud_sdl2.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/backend/sdl/soloud_sdl2_dll.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/audiosource/wav/stb_vorbis.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/audiosource/wav/soloud_wavstream.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/audiosource/wav/dr_impl.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/soloud/audiosource/wav/soloud_wav.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/StepStats.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/MovementConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/BlockAllocator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/Version.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/LimitState.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/Math.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/ConstraintSolverConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/DynamicMemory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/Island.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/Contact.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/ToiOutput.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/StepConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/StackAllocator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/ToiConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/pmr/PoolMemoryResource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/pmr/StatsResource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/pmr/MemoryResource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/RayCastOutput.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/EdgeShapeConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Manifold.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/MotorJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Simplex.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Joint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/MultiShapeConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WorldJoint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/FrictionJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/TargetJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/SeparationScenario.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/JointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Sweep.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Math.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/UnitVec.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/BodyConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/DiskShapeConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/AABB.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/ContactImpulsesList.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/DynamicTree.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/DistanceProxy.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/RopeJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WorldContact.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WorldBody.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/TimeOfImpact.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/GearJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/AabbTreeWorld.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Body.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WheelJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WeldJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WorldShape.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/ContactSolver.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Shape.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/PolygonShapeConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/PulleyJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WorldManifold.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/PositionSolverManifold.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/ConvexHull.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Velocity.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/Distance.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/ChainShapeConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/RevoluteJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/PrismaticJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/WorldMisc.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/CodeDumper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/VelocityConstraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/DistanceJointConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/World.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/MassData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/ShapeSeparation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/DistanceConf.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/PointStates.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/playrho/d2/part/Compositor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/inflate.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/compress.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/deflate.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/gzread.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/crc32.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/zutil.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/gzlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/inftrees.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/uncompr.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/gzwrite.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/trees.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/gzclose.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/inffast.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Zip/zlib/adler32.c
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGNodeStyle.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGPixelGrid.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGEnums.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGValue.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGConfig.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/YGNodeLayout.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/config/Config.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/algorithm/AbsoluteLayout.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/algorithm/CalculateLayout.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/algorithm/PixelGrid.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/algorithm/Cache.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/algorithm/Baseline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/algorithm/FlexLine.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/node/LayoutResults.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/node/Node.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/event/event.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/debug/Log.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/yoga/debug/AssertFatal.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/bgfxrenderer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.RectF.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.ResourceManager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.CurveLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.IntrusiveList.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNodeRoot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Effect.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.WorkerThread.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNodeModel.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNodeTrack.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.FCurves.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNodeRing.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.InternalScript.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.DefaultEffectLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.DefaultFile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Setting.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.InstanceGlobal.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNodeSprite.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.InstanceGroup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Resource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.EffectNodeRibbon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Instance.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Matrix43.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Matrix44.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.InstanceContainer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Vector3D.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Color.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Vector2D.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.Random.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Effekseer.InstanceChunk.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.TrackRendererBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.RenderStateBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/VertexBuffer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/GraphicsDeviceCPU.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.RibbonRendererBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/TextureLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.Renderer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.DDSTextureLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/ModelLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.ModelRendererBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.RingRendererBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.TGATextureLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.Renderer_Impl.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.SpriteRendererBase.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.CommonUtils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.PngTextureLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/EffekseerRendererCommon/EffekseerRenderer.GpuParticles.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/ForceField/ForceFields.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Network/Effekseer.Server.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Network/Effekseer.Client.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Network/Effekseer.Session.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Network/Effekseer.Socket.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/IO/Effekseer.EfkEfcFactory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/SIMD/Utils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/SIMD/Mat44f.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/SIMD/Mat43f.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Utils/Effekseer.CustomAllocator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/VectorField/VectorField.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/VectorField/VectorFieldLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Noise/CurlNoise.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Model/ModelLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Model/SplineGenerator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Model/Model.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Model/ProceduralModelGenerator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Model/PointCacheGenerator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Parameter/Easing.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Parameter/Effekseer.Parameters.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Parameter/GpuParticlesParameter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Parameter/Collisions.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Parameter/KillRules.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Parameter/Rotation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Material/Effekseer.MaterialFile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Material/Effekseer.MaterialCompiler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Effekseer/Effekseer/Material/Effekseer.CompiledMaterial.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/LayerGroup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/Tileset.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/Property.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/Object.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/ObjectGroup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/FreeFuncs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/ObjectTypes.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/TileLayer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/Map.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/ImageLayer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tmxlite/detail/pugixml.cpp
)

add_dependencies(entry SDL2)

find_library(
    # Sets the name of the path variable.
    libnapi-lib
    # Specifies the name of the NDK library that
    # you want CMake to locate.
    ace_napi.z
)

find_library(EGL-lib EGL)
find_library(GLES-lib GLESv3)

find_library(
    # Sets the name of the path variable.
    hilog-lib
    # Specifies the name of the NDK library that
    # you want CMake to locate.
    hilog_ndk.z
)

add_library(BGFX-lib STATIC IMPORTED)
set_target_properties(
	BGFX-lib PROPERTIES IMPORTED_LOCATION
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/bgfx/Lib/${OHOS_ARCH}/libbgfx.a
)

add_library(BX-lib STATIC IMPORTED)
set_target_properties(
	BX-lib PROPERTIES IMPORTED_LOCATION
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/bgfx/Lib/${OHOS_ARCH}/libbx.a
)

add_library(BIMG-lib STATIC IMPORTED)
set_target_properties(
	BIMG-lib PROPERTIES IMPORTED_LOCATION
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/bgfx/Lib/${OHOS_ARCH}/libbimg.a
)

add_library(BIMGDE-lib STATIC IMPORTED)
set_target_properties(
	BIMGDE-lib PROPERTIES IMPORTED_LOCATION
	${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/bgfx/Lib/${OHOS_ARCH}/libbimg_decode.a
)

target_link_libraries(entry PUBLIC libSDL2.so BGFX-lib BIMGDE-lib BIMG-lib BX-lib ${EGL-lib} ${GLES-lib} ${libnapi-lib} ${hilog-lib})
